added google links

--- a/CSS/assignment4.css
+++ b/CSS/assignment4.css
@@ -105,12 +105,12 @@ input:-moz-placeholder {
   border-width: 5px;
   color: #333;
   font-family: 'Helvetica', sans-serif;
-  font-size: 20px;
+  font-size: 26px;
   overflow: auto;
 }
 
 #dropdown > p {
-  padding-left: 1rem;
+  padding: 1rem;
   margin-bottom: -1rem;
 }
 
